@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2025-02-05T01:06:33Z",
+  "timestamp" : "2025-02-08T01:04:43Z",
   "count_outdated" : 515,
   "uniques_outdated" : 342,
-  "count" : 517,
-  "uniques" : 344,
+  "count" : 518,
+  "uniques" : 345,
   "clones" : [
     {
       "timestamp": "2025-02-03T00:00:00Z",
@@ -16,6 +16,15 @@
     },
     {
       "timestamp": "2025-02-04T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2025-02-07T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "count_decinc": [ 0, 1 ],
